[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scenes/City.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/MovingSun.gd" type="Script" id=2]
[ext_resource path="res://Scripts/PlacingHouse.gd" type="Script" id=3]
[ext_resource path="res://OQ_Toolkit/OQ_UI2D/OQ_UI2DCanvas.tscn" type="PackedScene" id=4]
[ext_resource path="res://OQ_Toolkit/OQ_Helpers/OQ_VisibilityToggle.tscn" type="PackedScene" id=5]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRController/Feature_UIRayCast.tscn" type="PackedScene" id=6]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin.tscn" type="PackedScene" id=7]
[ext_resource path="res://OQ_Toolkit/OQ_ARVRCamera.tscn" type="PackedScene" id=8]
[ext_resource path="res://Icons/Lamp_PNG_Clip_Art-2101.png" type="Texture" id=10]
[ext_resource path="res://Icons/Bench.png" type="Texture" id=11]
[ext_resource path="res://OQ_Toolkit/OQ_LeftController.tscn" type="PackedScene" id=12]
[ext_resource path="res://OQ_Toolkit/OQ_RightController.tscn" type="PackedScene" id=13]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Locomotion_Stick.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scripts/MoveVR.gd" type="Script" id=16]
[ext_resource path="res://OQ_Toolkit/OQ_ARVROrigin/Feature_VRSimulator.tscn" type="PackedScene" id=17]

[sub_resource type="BoxShape" id=19]
extents = Vector3( 43.9234, 1.32762, 50.2776 )

[sub_resource type="ProceduralSky" id=1]
radiance_size = 0
ground_bottom_color = Color( 0.92549, 0.921569, 0.67451, 1 )
ground_horizon_color = Color( 0.564706, 0.490196, 0.427451, 1 )
sun_latitude = -90.0
sun_angle_min = 3.64
sun_angle_max = 38.18
sun_curve = 0.0554785
texture_size = 0

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
tonemap_mode = 2
auto_exposure_enabled = true
ssao_enabled = true

[sub_resource type="CubeMesh" id=15]

[sub_resource type="SpatialMaterial" id=16]
flags_transparent = true
albedo_color = Color( 0, 0.392157, 1, 0 )

[sub_resource type="CubeMesh" id=17]

[sub_resource type="SpatialMaterial" id=18]
albedo_color = Color( 0.192157, 1, 0.0235294, 1 )

[node name="Spatial" type="Spatial"]
script = ExtResource( 2 )

[node name="City" parent="." instance=ExtResource( 1 )]

[node name="RigidBody" type="RigidBody" parent="City"]
mode = 1

[node name="CollisionShape" type="CollisionShape" parent="City/RigidBody"]
shape = SubResource( 19 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="WorldEnvironment"]
transform = Transform( -0.883181, -0.444487, -0.149742, 0.311528, -0.79457, 0.521161, -0.35063, 0.413631, 0.840219, 653.62, 266.744, 821.34 )
shadow_enabled = true

[node name="MoveVR" type="Spatial" parent="."]
script = ExtResource( 16 )

[node name="OQ_ARVROrigin" parent="MoveVR" instance=ExtResource( 7 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 44.8258, 1 )

[node name="OQ_ARVRCamera" parent="MoveVR/OQ_ARVROrigin" instance=ExtResource( 8 )]
transform = Transform( 0.999154, -0.0313051, 0.0266551, 0.031568, 0.999456, -0.00949956, -0.0263432, 0.010333, 0.9996, 0, 4.14077, 0 )
current = true
far = 8192.0

[node name="OQ_LeftController" parent="MoveVR/OQ_ARVROrigin" instance=ExtResource( 12 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 3.84077, -0.5 )

[node name="CustomRayCast" type="Spatial" parent="MoveVR/OQ_ARVROrigin/OQ_LeftController"]
script = ExtResource( 3 )

[node name="Position" type="Spatial" parent="MoveVR/OQ_ARVROrigin/OQ_LeftController/CustomRayCast"]

[node name="RayCast" type="RayCast" parent="MoveVR/OQ_ARVROrigin/OQ_LeftController/CustomRayCast/Position"]
transform = Transform( 1, 0, 0, 0, 0.0021642, -0.999997, 0, 0.999998, 0.0021642, -0.0360565, -0.0129395, 0 )
enabled = true
exclude_parent = false
cast_to = Vector3( 0, -250, 0 )
collision_mask = 3
collide_with_areas = true

[node name="MeshInstance" type="MeshInstance" parent="MoveVR/OQ_ARVROrigin/OQ_LeftController/CustomRayCast/Position"]
transform = Transform( 0.0118435, 0, 0, 0, 0.00939606, 0, 0, 0, 0.370681, -0.0393066, -0.0235901, -0.374268 )
mesh = SubResource( 15 )
skeleton = NodePath("../RayCast")
material/0 = SubResource( 16 )

[node name="ObjectPointer" type="Position3D" parent="MoveVR/OQ_ARVROrigin/OQ_LeftController/CustomRayCast/Position"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.92862, 0.122879 )

[node name="Marker" type="MeshInstance" parent="MoveVR/OQ_ARVROrigin/OQ_LeftController/CustomRayCast"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
visible = false
mesh = SubResource( 17 )
material/0 = SubResource( 18 )

[node name="Feature_UIRayCast" parent="MoveVR/OQ_ARVROrigin/OQ_LeftController" instance=ExtResource( 6 )]

[node name="OQ_RightController" parent="MoveVR/OQ_ARVROrigin" instance=ExtResource( 13 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 3.84077, -0.499996 )
autoload_model = false

[node name="OQ_VisibilityToggle" parent="MoveVR/OQ_ARVROrigin/OQ_RightController" instance=ExtResource( 5 )]
invisible_on_start = true

[node name="ColorRect" type="ColorRect" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 5.60489, 3.12647 )
color = Color( 0.282353, 0.282353, 0.282353, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/ColorRect"]
visible = false
margin_top = 1.0
margin_right = 40.0
margin_bottom = 10.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/ColorRect/ColorRect"]
visible = false
margin_top = 1.19209e-07
margin_right = 103.0
margin_bottom = 14.0
rect_scale = Vector2( 0.320997, 0.669127 )
text = "Custom Objects"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/ColorRect"]
visible = false
margin_left = 1.03461
margin_top = 11.4954
margin_right = 6044.03
margin_bottom = 7017.5
rect_scale = Vector2( 0.00113505, 0.00204899 )
icon = ExtResource( 10 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/ColorRect"]
visible = false
margin_left = 9.65649
margin_top = 10.0278
margin_right = 6052.66
margin_bottom = 7016.03
rect_scale = Vector2( 0.0023995, 0.00304365 )
icon = ExtResource( 11 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OQ_UI2DCanvas" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle" instance=ExtResource( 4 )]

[node name="WindowDialog" type="ColorRect" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas"]
visible = false
margin_right = 316.0
margin_bottom = 134.0
color = Color( 0.211765, 0.211765, 0.211765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog"]
margin_left = 102.0
margin_top = 10.0
margin_right = 298.0
margin_bottom = 26.0
min_value = -180.0
max_value = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HLang" type="HSlider" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog"]
margin_left = 102.0
margin_top = 36.0
margin_right = 298.0
margin_bottom = 52.0
min_value = -180.0
max_value = 180.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sunlight" type="HSlider" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog"]
margin_left = 102.0
margin_top = 64.0
margin_right = 298.0
margin_bottom = 80.0
min_value = 1.0
max_value = 30.0
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog"]
margin_left = 8.0
margin_top = 10.0
margin_right = 95.0
margin_bottom = 24.0
text = "Sun longitude"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog"]
margin_left = 8.0
margin_top = 36.0
margin_right = 95.0
margin_bottom = 50.0
text = "Sun latitude"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog"]
margin_left = 8.0
margin_top = 64.0
margin_right = 95.0
margin_bottom = 78.0
text = "Sun color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceObject" type="Button" parent="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog"]
margin_left = 17.0
margin_top = 99.0
margin_right = 29.0
margin_bottom = 119.0
text = "Place Object"

[node name="Locomotion_Stick" parent="MoveVR/OQ_ARVROrigin" instance=ExtResource( 14 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.25, 3.84077, -0.499998 )
move_speed = 7.0

[node name="Feature_VRSimulator" parent="MoveVR" instance=ExtResource( 17 )]
player_height = 1
info_label_visible = false

[connection signal="value_changed" from="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog/HSlider" to="MoveVR" method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog/HLang" to="MoveVR" method="_on_HLang_value_changed"]
[connection signal="value_changed" from="MoveVR/OQ_ARVROrigin/OQ_RightController/OQ_VisibilityToggle/OQ_UI2DCanvas/WindowDialog/Sunlight" to="MoveVR" method="_on_Sunlight_value_changed"]
